@@ -1,5 +1,7 @@
 Version 2.02.25 -
 =================================
+  Fix vgsplit for lvm1 format (set and validate VG name in PVs metadata).
+  Split metadata areas in vgsplit properly.
 
 Version 2.02.24 - 19th March 2007
 =================================
